# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-0611cb74/example-0611cb74-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_0611cb74"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_0611cb74"]
        
        [project]
        name = "example-0611cb74"
        version = "0.0.0"
        dependencies = ["example-0611cb74-a"]
        requires-python = ">=3.7"
        description = "null"
  
      ''',
      'build/example-0611cb74/example-0611cb74-0.0.0/src/example_0611cb74/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-0611cb74/example-0611cb74-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_0611cb74_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_0611cb74_a"]
        
        [project]
        name = "example-0611cb74-a"
        version = "1.0.0"
        dependencies = ["example-0611cb74-b>=1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-0611cb74/example-0611cb74-a-1.0.0/src/example_0611cb74_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-0611cb74/example-0611cb74-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_0611cb74_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_0611cb74_b"]
        
        [project]
        name = "example-0611cb74-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-0611cb74/example-0611cb74-b-1.0.0/src/example_0611cb74_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'dist/example-0611cb74/example_0611cb74-0.0.0.tar.gz': 'md5:122f0762969764b1c7efa72e6cc32a68',
      'dist/example-0611cb74/example_0611cb74_a-1.0.0-py3-none-any.whl': 'md5:ad587c99746197e2e435d23dd683f6cd',
      'dist/example-0611cb74/example_0611cb74_a-1.0.0.tar.gz': 'md5:bf581c21ad045fb85c4053151e4ca94b',
      'dist/example-0611cb74/example_0611cb74_b-1.0.0-py3-none-any.whl': 'md5:6dac15ad470e653f5f47ea6ddc3a6180',
      'dist/example-0611cb74/example_0611cb74_b-1.0.0.tar.gz': 'md5:5555c31ea0c212cc69528753b06ad9ac',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-0611cb74
        │       ├── example-0611cb74-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_0611cb74
        │       │           └── __init__.py
        │       ├── example-0611cb74-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_0611cb74_a
        │       │           └── __init__.py
        │       └── example-0611cb74-b-1.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_0611cb74_b
        │                   └── __init__.py
        └── dist
            └── example-0611cb74
                ├── example_0611cb74-0.0.0.tar.gz
                ├── example_0611cb74_a-1.0.0-py3-none-any.whl
                ├── example_0611cb74_a-1.0.0.tar.gz
                ├── example_0611cb74_b-1.0.0-py3-none-any.whl
                └── example_0611cb74_b-1.0.0.tar.gz
        
        13 directories, 11 files
  
      ''',
    }),
    'stderr': '''
      INFO:packse.build:Building 'example-0611cb74' in directory 'build/example-0611cb74'
      INFO:packse.build:Generated project for 'example-0611cb74-a-1.0.0' in 0.99ms
      INFO:packse.build:Built package 'example-0611cb74-a-1.0.0' in 2.23s
      INFO:packse.build:Generated project for 'example-0611cb74-b-1.0.0' in 0.95ms
      INFO:packse.build:Built package 'example-0611cb74-b-1.0.0' in 1.77s
      INFO:packse.build:Generated project for 'example-0611cb74-0.0.0' in 0.89ms
      INFO:packse.build:Built package 'example-0611cb74-0.0.0' in 1.64s
      INFO:packse.build:Built scenario 'example-0611cb74' in 5.66s
  
    ''',
    'stdout': '''
      example-0611cb74
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-0611cb74/example-0611cb74-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_0611cb74"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_0611cb74"]
        
        [project]
        name = "example-0611cb74"
        version = "0.0.0"
        dependencies = ["example-0611cb74-a"]
        requires-python = ">=3.7"
        description = "null"
  
      ''',
      'build/example-0611cb74/example-0611cb74-0.0.0/src/example_0611cb74/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-0611cb74/example-0611cb74-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_0611cb74_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_0611cb74_a"]
        
        [project]
        name = "example-0611cb74-a"
        version = "1.0.0"
        dependencies = ["example-0611cb74-b>=1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-0611cb74/example-0611cb74-a-1.0.0/src/example_0611cb74_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-0611cb74/example-0611cb74-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_0611cb74_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_0611cb74_b"]
        
        [project]
        name = "example-0611cb74-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-0611cb74/example-0611cb74-b-1.0.0/src/example_0611cb74_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'dist/example-0611cb74/example_0611cb74-0.0.0.tar.gz': 'md5:122f0762969764b1c7efa72e6cc32a68',
      'dist/example-0611cb74/example_0611cb74_a-1.0.0-py3-none-any.whl': 'md5:ad587c99746197e2e435d23dd683f6cd',
      'dist/example-0611cb74/example_0611cb74_a-1.0.0.tar.gz': 'md5:bf581c21ad045fb85c4053151e4ca94b',
      'dist/example-0611cb74/example_0611cb74_b-1.0.0-py3-none-any.whl': 'md5:6dac15ad470e653f5f47ea6ddc3a6180',
      'dist/example-0611cb74/example_0611cb74_b-1.0.0.tar.gz': 'md5:5555c31ea0c212cc69528753b06ad9ac',
      'tree': '''
        test_build_example_already_exi0
        ├── build
        │   └── example-0611cb74
        │       ├── example-0611cb74-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_0611cb74
        │       │           └── __init__.py
        │       ├── example-0611cb74-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_0611cb74_a
        │       │           └── __init__.py
        │       └── example-0611cb74-b-1.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_0611cb74_b
        │                   └── __init__.py
        └── dist
            └── example-0611cb74
                ├── example_0611cb74-0.0.0.tar.gz
                ├── example_0611cb74_a-1.0.0-py3-none-any.whl
                ├── example_0611cb74_a-1.0.0.tar.gz
                ├── example_0611cb74_b-1.0.0-py3-none-any.whl
                └── example_0611cb74_b-1.0.0.tar.gz
        
        13 directories, 11 files
  
      ''',
    }),
    'stderr': '''
      INFO:packse.build:Building 'example-0611cb74' in directory 'build/example-0611cb74'
      INFO:packse.build:Generated project for 'example-0611cb74-a-1.0.0' in 0.81ms
      INFO:packse.build:Built package 'example-0611cb74-a-1.0.0' in 1.64s
      INFO:packse.build:Generated project for 'example-0611cb74-b-1.0.0' in 0.87ms
      INFO:packse.build:Built package 'example-0611cb74-b-1.0.0' in 1.68s
      INFO:packse.build:Generated project for 'example-0611cb74-0.0.0' in 0.85ms
      INFO:packse.build:Built package 'example-0611cb74-0.0.0' in 1.62s
      INFO:packse.build:Built scenario 'example-0611cb74' in 4.94s
  
    ''',
    'stdout': '''
      example-0611cb74
  
    ''',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '''
      INFO:packse.build:Building 'example-0611cb74' in directory 'build/example-0611cb74'
      INFO:packse.build:Generated project for 'example-0611cb74-a-1.0.0' in 0.82ms
      INFO:packse.build:Built package 'example-0611cb74-a-1.0.0' in 1.67s
      INFO:packse.build:Generated project for 'example-0611cb74-b-1.0.0' in 0.86ms
      INFO:packse.build:Built package 'example-0611cb74-b-1.0.0' in 1.78s
      INFO:packse.build:Generated project for 'example-0611cb74-0.0.0' in 0.82ms
      INFO:packse.build:Built package 'example-0611cb74-0.0.0' in 1.63s
      INFO:packse.build:Built scenario 'example-0611cb74' in 5.09s
  
    ''',
    'stdout': '''
      example-0611cb74
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-da7f36ff/example-da7f36ff-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_da7f36ff"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_da7f36ff"]
        
        [project]
        name = "example-da7f36ff"
        version = "0.0.0"
        dependencies = ["example-da7f36ff-a"]
        requires-python = ">=3.7"
        description = "null"
  
      ''',
      'build/example-da7f36ff/example-da7f36ff-0.0.0/src/example_da7f36ff/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-da7f36ff/example-da7f36ff-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_da7f36ff_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_da7f36ff_a"]
        
        [project]
        name = "example-da7f36ff-a"
        version = "1.0.0"
        dependencies = ["example-da7f36ff-b>=1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-da7f36ff/example-da7f36ff-a-1.0.0/src/example_da7f36ff_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-da7f36ff/example-da7f36ff-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_da7f36ff_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_da7f36ff_b"]
        
        [project]
        name = "example-da7f36ff-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-da7f36ff/example-da7f36ff-b-1.0.0/src/example_da7f36ff_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'dist/example-da7f36ff/example_da7f36ff-0.0.0.tar.gz': 'md5:eae13d7168259363672d16e84ddd8fb4',
      'dist/example-da7f36ff/example_da7f36ff_a-1.0.0-py3-none-any.whl': 'md5:78463a93467c33e2e0f2dab1d5dd7eaf',
      'dist/example-da7f36ff/example_da7f36ff_a-1.0.0.tar.gz': 'md5:954ba198f542d768e13aa1720b0d183f',
      'dist/example-da7f36ff/example_da7f36ff_b-1.0.0-py3-none-any.whl': 'md5:fa1b5955e385df12c8f700b75145a633',
      'dist/example-da7f36ff/example_da7f36ff_b-1.0.0.tar.gz': 'md5:767be368bf5e60088bd12c636dd888eb',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-da7f36ff
        │       ├── example-da7f36ff-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_da7f36ff
        │       │           └── __init__.py
        │       ├── example-da7f36ff-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_da7f36ff_a
        │       │           └── __init__.py
        │       └── example-da7f36ff-b-1.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_da7f36ff_b
        │                   └── __init__.py
        └── dist
            └── example-da7f36ff
                ├── example_da7f36ff-0.0.0.tar.gz
                ├── example_da7f36ff_a-1.0.0-py3-none-any.whl
                ├── example_da7f36ff_a-1.0.0.tar.gz
                ├── example_da7f36ff_b-1.0.0-py3-none-any.whl
                └── example_da7f36ff_b-1.0.0.tar.gz
        
        13 directories, 11 files
  
      ''',
    }),
    'stderr': '''
      INFO:packse.build:Building 'example-da7f36ff' in directory 'build/example-da7f36ff'
      INFO:packse.build:Generated project for 'example-da7f36ff-a-1.0.0' in 0.82ms
      INFO:packse.build:Built package 'example-da7f36ff-a-1.0.0' in 1.79s
      INFO:packse.build:Generated project for 'example-da7f36ff-b-1.0.0' in 1.26ms
      INFO:packse.build:Built package 'example-da7f36ff-b-1.0.0' in 1.71s
      INFO:packse.build:Generated project for 'example-da7f36ff-0.0.0' in 0.85ms
      INFO:packse.build:Built package 'example-da7f36ff-0.0.0' in 1.56s
      INFO:packse.build:Built scenario 'example-da7f36ff' in 5.06s
  
    ''',
    'stdout': '''
      example-da7f36ff
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '$PWD/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [-v] [-q] targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      Scenario 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
